Fix the inconsistent spacing around album miniatures

--- a/src/assets/public/css/browser-albums.css
+++ b/src/assets/public/css/browser-albums.css
@@ -34,10 +34,15 @@
 	cursor: pointer;
 }
 
+.browser-albums .tab-name-list ul {
+	line-height: 0;
+}
+
 .browser-albums .tab-name-list li {
 	width: 160px;
 	height: 160px;
 	display: inline-block;
+	line-height: initial;
 }
 
 @media (max-width: 991px) {
